--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "mdi-material-ui": "^6.16.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-ga": "^3.1.2",
     "react-masonry-css": "^1.0.14",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
